committing to test on z

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-notifications/launchbar-notifications.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-notifications/launchbar-notifications.component.css
@@ -36,7 +36,17 @@
     background-color: #36617a;
   }
   
-  
+.myapp-no-padding-dialog .mat-dialog-container {
+  background-color: white;
+}
+
+.mat-snack-bar-container {
+  background-color: white;
+  width: 100px;
+  position: absolute;
+  right: 0px;
+}
+
   /*
     This program and the accompanying materials are
     made available under the terms of the Eclipse Public License v2.0 which accompanies
