Added some fixes to notification manager

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-notifications/launchbar-notifications.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-notifications/launchbar-notifications.component.html
@@ -12,6 +12,15 @@
     <span> {{messageCount}} </span>
     <button (click)="buttonClicked($event)">Test</button>
     <div class="launchbar-seperator left"></div>
+    <div [hidden]="shown" class='notifications'>
+      <div class="notification" *ngFor="let item of allNotifications; let i = index" [attr.data-index]="i">
+        <div class="notification-container">
+          <div class="message" >{{item.message}}</div>
+          <div class="delete" (click)="deleteNotification($event, i)">X</div>
+        </div>
+      </div>
+    </div>
+
   </div>
   
   <!-- 
