--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-notifications/launchbar-notifications.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-notifications/launchbar-notifications.component.css
@@ -35,18 +35,30 @@
     width: 5px;
     background-color: #36617a;
   }
-  
-.myapp-no-padding-dialog .mat-dialog-container {
-  background-color: white;
-}
 
-.mat-snack-bar-container {
-  background-color: white;
-  width: 100px;
-  position: absolute;
-  right: 0px;
-}
+  .notifications {
+    width: 250px;
+    height: 300px;
+    margin-top: -347px;
+    background-color: white;
+    margin-left: -190px;
+    overflow: auto;
+  }
 
+
+  .message {
+    color: black;
+    float: left;
+  }
+
+  .delete {
+    color: green;
+    float: right;
+  }
+
+  .notification-container {
+    overflow: hidden;
+  }
   /*
     This program and the accompanying materials are
     made available under the terms of the Eclipse Public License v2.0 which accompanies
