--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-notifications/launchbar-notifications.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-notifications/launchbar-notifications.component.css
@@ -181,8 +181,8 @@
 
 .launchbar-notif-icon {
   float: left;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background: #dde8f1;
   margin-top: -16px;
@@ -191,8 +191,8 @@
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
-  margin-top: -5px;
-  margin-left: 10px;
+  margin-top: -10px;
+  margin-left: 5px;
 }
 
 .launchbar-count-icon {
@@ -253,8 +253,8 @@
   /* padding: 0; */
   /* position: absolute; */
   /* background: transparent; */
-  max-width: 25px;
-  max-width: 25px;
+  max-width: 35px;
+  max-width: 35px;
   margin-left: 2px;
   margin-top: 2px;
 }
@@ -315,10 +315,21 @@
   margin-left: 2px;
 }
 
-.centered {
-  position: absolute;
-  top: 60%;
-  left: 55%;
+.centered-single {
+  /* position: absolute; */
+  /* top: 60%; */
+  /* left: 55%; */
+  margin-left: 29px;
+  margin-top: 12px;
+  transform: translate(-50%, -50%);
+}
+
+.centered-double {
+  /* position: absolute; */
+  /* top: 60%; */
+  /* left: 55%; */
+  margin-left: 26px;
+  margin-top: 12px;
   transform: translate(-50%, -50%);
 }
 /*
