Cleaned up some stuff
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -51,6 +51,12 @@
   background-size: 30px 30px;
 }
 
+.launchbar-tray-icon.notification {
+  background-image: url('../../../../../assets/images/launchbar/notifications/notification.png');
+  background-size: 26px 26px;
+  /* margin-right: 18px; */
+}
+
 .launchbar-user:hover {
   opacity: 0.9;
 }
@@ -108,7 +114,163 @@
   left: 0;
 }
 
+.notifications {
+  width: 335px;
+  height: 350px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background: #dde8f1;
+  /* padding: 10px; */
+  overflow-y: auto;
 
+
+  /* width: 250px; */
+  /* height: 300px; */
+  margin-top: -440px;
+  /* background-color: white; */
+  margin-right: 100px;
+  float: right;
+  /* overflow: auto; */
+}
+
+.caret-up {
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+
+  border-bottom: 20px solid #dde8f1;
+}
+
+.caret-down {
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 20px solid #dde8f1;
+  /* left: 892px; */
+  float: right;
+  margin-right: 140px;
+  margin-top: -90px;
+}
+
+/* .launch-widget-caret { */
+  /* position: absolute; */
+/* } */
+
+.outer-container {
+  /* overflow:hidden; */
+  padding: 10px;
+  /* width: 300px; */
+}
+
+.notification-item {
+  transition: 0.3s;
+}
+
+.notification-item:hover {
+  /* overflow:hidden; */
+  /* width: 300px; */
+  background-color: #B1BAC1;
+}
+
+.icon-container {
+  width: 55px;
+  height: 40px;
+  display: inline-block;
+  vertical-align: top;
+  /* float: left; */
+}
+
+
+.notification-icon {
+  /* box-sizing: border-box; */
+  /* margin: 0; */
+  /* padding: 0; */
+  /* position: absolute; */
+  /* background: transparent; */
+  max-width: 40px;
+  max-width: 40px;
+  margin-left: 2px;
+  margin-top: 2px;
+}
+
+.notification-content {
+  display: inline-block;
+  width: 210px;
+}
+
+.notification-title {
+  color: black;
+  font-weight: 600;
+  font-size: 16px;
+  /* float: left; */
+}
+
+.notification-message {
+  color: black;
+  /* margin-top: 5px; */
+  /* float: left; */
+}
+
+.delete-notification {
+  display: inline-block;
+  color: black;
+  vertical-align: top;
+  float: right;
+  opacity: .5;
+  transition: 0.3s;
+
+}
+
+.delete-notification:hover {
+  opacity: 1;
+}
+
+.time {
+  color: black;
+  font-size: 12px;
+  float: left;
+}
+
+.timeAgo {
+  color: black;
+  font-size: 12px;
+  float: right;
+}
+
+.time-container {
+  /* float: left; */
+  display: inline-block;
+  /* width: 100%; */
+  margin-left: 55px;
+  width: 240px;
+  margin-top: 5px;
+}
+
+.launchbar-tray-indicator {
+  float: left;
+  width: 23px;
+  height: 23px;
+  border-radius: 50%;
+  background: red;
+  margin-top: -13px;
+  margin-left: 17px;
+  background-size: 32px 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 23px; 
+}
+
+.notification-breaker {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
