--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.css
@@ -60,13 +60,13 @@ rs-com-launchbar-icon {
   text-align: center;
 }
 
-
+/* 
 .mat-snack-bar-container {
-  background-color: white;
+  background-color: blue;
   width: 100px;
   position: absolute;
   right: 20px;
-}
+} */
 
 
 /*
