--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
@@ -33,6 +33,7 @@
           </div>
           <img class="delete-notification" (click)="deleteNotification(i);$event.stopPropagation()" [src]="closeImage">
           <div class="time-container">
+            <!-- <div class="time">{{item.date.split("T")[1].split('.')[0]}}</div> -->
             <div class="time">{{item.date.split("T")[1].split('.')[0]}}</div>
             <div class="timeAgo">{{info[i].timeSince}}</div>
           </div>
