--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.css
@@ -13,7 +13,6 @@
 .launchbar-container {
   box-sizing: border-box;
   position: absolute;
-  height: 60px;
   width: 100%;
   bottom: 0;
   background: transparent;
@@ -26,6 +25,14 @@
   justify-content: flex-end;
 }
 
+.launchbar-large {
+  height: 70px;
+}
+
+.launchbar-small {
+  height: 40px;
+}
+
 .launchbar-container.active {
   z-index: 10000;
 }
@@ -33,7 +40,7 @@
 .launchbar-basement {
   position: absolute;
   box-sizing: border-box;
-  height: 60px;
+  height: 100%;
   width: 100%;
   bottom: 0;
   background: #557999;
@@ -42,13 +49,13 @@
 }
 
 .launchbar {
-  height: 110px;
   box-sizing: border-box;
   display: flex;
   background: transparent;
   text-align: left;
   z-index: 6;
   margin: 0;
+  height: 100%;
   margin-left: 130px; /* Prevent overlap with launch widget on the left */
   margin-right: 150px; /* Prevent overlap with lauchbar clock and searcb bar on the right */
   padding: 0;
@@ -59,6 +66,7 @@
 rs-com-launchbar-icon {
   text-align: center;
 }
+
 
 
 /*
