--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
@@ -11,7 +11,7 @@
 -->
 
 <div class="launch-widget">
-  <div class="launchbar-icon launchbar-menu-icon" (click)="activeToggle()"></div>
+  <div class="mvd-launchbar-icon mvd-launchbar-icon-large launchbar-menu-icon" (click)="activeToggle()"></div>
   <div class="launchbar-separator right"></div>
 </div>
 
