--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -17,11 +17,11 @@
   right: 0;
   width: fit-content;
   min-width: 185px; /* fit-content seems to fail at times with Safari, min-width here as a safety */
-  height: 60px;
+  height: 100%;
   z-index: 7;
   color: #eee;
   padding-left: 18px;
-  padding-top: 11px;
+  padding-top: 16px;
   padding-right: 10px;
   text-align: right;
 }
@@ -57,9 +57,9 @@
 
 .launchbar-user-popup {
   width: 155px;
-  height: 120px;
+  min-height: 120px;
   position: absolute;
-  bottom: 60px;
+  bottom: 70px;
   right: 0;
   border-top-left-radius: 10px;
   background: #dde8f1;
@@ -90,22 +90,6 @@
 
 .launchbar-username {
   text-align: center;
-}
-
-.launchbar-separator {
-  position: absolute;
-  bottom: 0;
-  height: 60px;
-  width: 5px;
-  background-color: #36617a;
-}
-
-.launchbar-separator.right {
-  right: 0;
-}
-
-.launchbar-separator.left {
-  left: 0;
 }
 
 
