--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -243,6 +243,16 @@
   margin-top: 0px;
   margin-bottom: 0px;
 }
+
+::ng-deep .testtest {
+  background-color: #dde8f1;
+  width: 320px;
+  position: absolute;
+  right: 20px;
+  padding: 5px !important;
+  margin-top: 10px !important;
+}
+
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
