Restructed the notifications being stored and the manager
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -244,7 +244,7 @@
   margin-bottom: 0px;
 }
 
-::ng-deep .testtest {
+::ng-deep .org_zowe_zlux_ng2desktop_snackbar {
   background-color: #dde8f1;
   width: 320px;
   position: absolute;
