--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
@@ -22,7 +22,7 @@
 </div>
 
 <div [hidden]="!notificationsVisible" class='notifications'>
-  <div class="notification-item" *ngFor="let item of allNotifications; let i = index" [attr.data-index]="i">
+  <div class="notification-item" *ngFor="let item of notifications; let i = index" [attr.data-index]="i">
       <div class="outer-container" (click)="focusApplication(i)">
           <div class="notification-icon-container">
             <img class="notification-icon" [src]="info[i].imgSrc">
@@ -31,11 +31,12 @@
             <div class="notification-title">{{item.title}}</div>
             <div class="notification-message">{{item.message}}</div>
           </div>
-          <img class="delete-notification" (click)="deleteNotification(i);$event.stopPropagation()" [src]="closeImage">
-          <div class="time-container">
-            <div class="time">{{item.date.split("T")[1].split('.')[0]}}</div>
-            <div class="timeAgo">{{info[i].timeSince}}</div>
-          </div>
+          <img class="delete-notification" (click)="deleteNotification(item);$event.stopPropagation()" [src]="closeImage">
+          <!-- Time Does Not Work -->
+          <!-- <div class="time-container"> -->
+            <!-- <div class="time">{{item.date.split("T")[1].split('.')[0]}}</div> -->
+            <!-- <div class="timeAgo">{{info[i].timeSince}}</div> -->
+          <!-- </div> -->
       </div>
       <hr class="notification-breaker">
   </div>
@@ -50,7 +51,7 @@
     <span>{{date | date:'shortDate'}}</span>
   </span>
   <div #usericon class="launchbar-tray-icon notification" (click)="toggleNotifications()">
-      <div [hidden]="messageCount == 0"class="launchbar-tray-indicator">{{messageCount}}</div>
+      <div [hidden]="notifications.length == 0"class="launchbar-tray-indicator">{{notifications.length}}</div>
   </div>
   <div #usericon class="launchbar-tray-icon settings" (click)="togglePersonalizationPanel()"></div>
   <div #usericon class="launchbar-tray-icon user" (click)="togglePopup()"></div>
