Fix conflicts with editor
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -245,12 +245,9 @@
 }
 
 ::ng-deep .org_zowe_zlux_ng2desktop_snackbar {
-  background-color: #dde8f1;
-  width: 320px;
-  position: absolute;
-  right: 20px;
+  background-color: #dde8f1 !important;
+  color: black !important;
   padding: 5px !important;
-  margin-top: 10px !important;
 }
 
 /*
