--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/shared/snackbar/snackbar.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/shared/snackbar/snackbar.component.css
@@ -28,7 +28,7 @@
 
 .outer-snackbar-container {
     overflow: hidden;
-    float: left;
+    /* float: left; */
 }
 
 .snackbar-info {
@@ -62,6 +62,7 @@
     outline:none;
     border: none;
     transition: 0.3s;
+    padding: 5px;
 }
 
 .snackbar-dismiss-button:hover {
