--- a/virtual-desktop/src/app/window-manager/simple-window-manager/simple.component.html
+++ b/virtual-desktop/src/app/window-manager/simple-window-manager/simple.component.html
@@ -11,7 +11,10 @@
 -->
 
 <div class="degenerate-container">
-  <rs-com-login *ngIf="showLogin">
+  <h1 style="text-align:center" *ngIf="error.length > 0">
+    {{error}}
+  </h1>
+  <rs-com-login *ngIf="error.length == 0 && showLogin">
     <com-rs-mvd-viewport [viewportId]="viewportId">
       <!-- Loading display -->
       <div class="full-center">
@@ -19,7 +22,7 @@
       </div>
     </com-rs-mvd-viewport>
   </rs-com-login>
-  <com-rs-mvd-viewport *ngIf="!showLogin" [viewportId]="viewportId">
+  <com-rs-mvd-viewport *ngIf="error.length == 0 && !showLogin" [viewportId]="viewportId">
     <!-- Loading display -->
     <div class="full-center">
       <i class="fa fa-spinner fa-spin fa-3x"></i>
