--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -250,6 +250,13 @@
   padding: 5px !important;
 }
 
+::ng-deep .org_zowe_zlux_editor_snackbar {
+  border-radius: 7px !important;
+  min-width: 400px !important;
+  padding: 5px !important;
+  background-color: #464646 !important;
+}
+
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
