--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
@@ -21,7 +21,8 @@
   -->
 </div>
 
-<div [hidden]="!notificationsVisible" class='notifications'>
+<div #notificationicon [hidden]="!notificationsVisible" class='notifications'>
+  <div [hidden]="notifications.length > 0" class="no-notifications">No Notifications</div>
   <div class="notification-item" *ngFor="let item of notifications; let i = index" [attr.data-index]="i">
       <div class="outer-container" (click)="focusApplication(i)">
           <div class="notification-icon-container">
@@ -33,10 +34,10 @@
           </div>
           <img class="delete-notification" (click)="deleteNotification(item);$event.stopPropagation()" [src]="closeImage">
           <!-- Time Does Not Work -->
-          <!-- <div class="time-container"> -->
-            <!-- <div class="time">{{item.date.split("T")[1].split('.')[0]}}</div> -->
-            <!-- <div class="timeAgo">{{info[i].timeSince}}</div> -->
-          <!-- </div> -->
+          <div class="time-container">
+            <div class="time">{{item.recievedDate.toLocaleTimeString()}}</div>
+            <div class="timeAgo">{{timeSince[i]}}</div>
+          </div>
       </div>
       <hr class="notification-breaker">
   </div>
@@ -50,7 +51,7 @@
     <br>
     <span>{{date | date:'shortDate'}}</span>
   </span>
-  <div #usericon class="launchbar-tray-icon notification" (click)="toggleNotifications()">
+  <div #notificationicon class="launchbar-tray-icon notification" (click)="toggleNotifications()">
       <div [hidden]="notifications.length == 0"class="launchbar-tray-indicator">{{notifications.length}}</div>
   </div>
   <div #usericon class="launchbar-tray-icon settings" (click)="togglePersonalizationPanel()"></div>
