--- a/system-apps/admin-notification-app/webClient/src/app/adminnotification-component.scss
+++ b/system-apps/admin-notification-app/webClient/src/app/adminnotification-component.scss
@@ -115,6 +115,10 @@ $css--reset: false;
   margin-top: 10px;
 }
 
+.response {
+  padding-top: 7px;
+}
+
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
