--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
@@ -12,6 +12,7 @@
 
 .context-menu {
   position: absolute;
+  margin-left: 2px; /* Offset menu so adjacent item is not automatically selected */
   z-index: 20000;
   min-width: 180px;
   width: auto;
@@ -32,7 +33,7 @@
 }
 
 .context-menu>ul {
-  background-color:#eaeaea;
+  /* background-color:#eaeaea; */
   list-style: none;
   padding: 0;
   margin: 0;
@@ -48,12 +49,14 @@
   font-weight: 400;
   white-space:nowrap;
   color:#404040;
-  border-bottom: 1px solid #ccc;
+  border-style: solid;
+  border-width: 0 1px 1px 1px;
+  border-color: #ccc;
   cursor: pointer;
   position:relative;
 }
 
-.context-menu .multi-menu-item>.menu-expand-caret {
+.context-menu .multi-menu-item .menu-expand-caret {
   position: absolute;
   margin: auto;
   top: 0;
@@ -77,10 +80,11 @@
 .context-menu .multi-menu-item>.submenu {
   width: 0;
   height: 0;
-  right: 0;
+  right: 1px;
   top: 0;
   position: absolute;
   display: none;
+  z-index: 1;
 }
 
 .context-menu .multi-menu-item>.submenu>com-rs-mvd-context-menu {
