--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.html
@@ -10,36 +10,69 @@
   Copyright Contributors to the Zowe Project.
 -->
 
-<div class='context-menu' #contextmenu [style.left.px]='this.newX' [style.top.px]='this.newY'>
-    <ul>
-      <ng-container *ngFor='let menuItem of menuItems'>
-        <ng-container *ngIf='menuItem.children != null && menuItem.children.length > 0; then multiItem else singleItem'></ng-container>
-        <ng-template #singleItem>
-          <li class='menu-item' [class.active]="hovering==menuItem" (click)='itemClicked(menuItem); $event.stopPropagation(); closeContextMenu()' (mouseover)="hovering=menuItem" (mouseleave)="hovering=null">
-            <span>{{menuItem.text}}</span>
-          </li>
-        </ng-template>
-        <ng-template #multiItem>
-          <li class='menu-item multi-menu-item' [class.active]="hovering==menuItem" (mouseover)="hovering=menuItem" (mouseleave)="hovering=null">
+<div
+  class='context-menu'
+  #contextmenu
+  [style.left.px]='this.newX'
+  [style.top.px]='this.newY'
+  [class.navigable]='this.isNavigable'
+>
+  <ul>
+    <ng-container *ngFor='let menuItem of menuItems; let i = index;'>
+      <ng-container *ngIf='menuItem.children != null && menuItem.children.length > 0; then multiItem else singleItem'></ng-container>
+      <ng-template #singleItem>
+        <li
+          class='menu-item'
+          [class.active]="i==this.activeIndex"
+          [class.top]="i==0"
+          [class.bottom]="i==menuItems.length-1"
+          (click)='itemClicked(menuItem); $event.stopPropagation(); closeContextMenu()'
+          (mouseover)="this.activeIndex=i; makeNavigable(); $event.stopPropagation();"
+        >
+          <span>{{menuItem.text}}</span>
+        </li>
+      </ng-template>
+      <ng-template #multiItem>
+        <li
+          class='menu-item multi-menu-item'
+          [class.active]="i==this.activeIndex"
+          [class.top]="i==0"
+          [class.bottom]="i==menuItems.length-1"
+          (mouseover)="this.activeIndex=i; makeNavigable(); $event.stopPropagation();"
+        >
+          <div>
             <span>{{menuItem.text}}</span>
             <div class="menu-expand-caret"></div>
-            <div class="submenu">
-              <com-rs-mvd-context-menu [xPos]="0" [yPos]="0" [menuItems]="menuItem.children" (complete)="closeContextMenu()"></com-rs-mvd-context-menu>
-            </div>
-          </li>
-        </ng-template>
-      </ng-container>
-    </ul>
-  </div>
+          </div>
+          <div class="submenu">
+            <com-rs-mvd-context-menu
+              #contextmenus
+              [xPos]="0"
+              [yPos]="0"
+              [menuItems]="menuItem.children"
+              [isChildMenu]="true"
+              [isParentActive]="i==this.activeIndex"
+              [parentText]="this.menuItems[i].text"
+              [parentNavigable]="this.isNavigable"
+              (complete)="closeContextMenu()"
+              (makeParentUnnavigable)="makeUnnavigable()"
+              (makeParentNavigable)="makeNavigable()"
+              (sendRefToParent)="receiveRefFromChild($event)"
+            ></com-rs-mvd-context-menu>
+          </div>
+        </li>
+      </ng-template>
+    </ng-container>
+  </ul>
+</div>
+
+<!-- 
+  This program and the accompanying materials are
+  made available under the terms of the Eclipse Public License v2.0 which accompanies
+  this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
   
-  <!-- 
-    This program and the accompanying materials are
-    made available under the terms of the Eclipse Public License v2.0 which accompanies
-    this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
-    
-    SPDX-License-Identifier: EPL-2.0
-    
-    Copyright Contributors to the Zowe Project.
-  -->
+  SPDX-License-Identifier: EPL-2.0
   
-  
+  Copyright Contributors to the Zowe Project.
+-->
+
