--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
@@ -97,6 +97,20 @@
   border-bottom: none;
 }
 
+.icon {
+  width: 19px;
+  margin-right: 5px;
+  background-size: contain;
+}
+
+.icon-person {
+  background-image: url(../../../../assets/images/contextmenu/person.png);
+}
+
+.icon-settings {
+  background-image: url(../../../../assets/images/contextmenu/settings.png);
+}
+
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
