Add functionality to allow user to select menu item by clicking Enter
Signed-off-by: Gabriel Keenleyside <gabrielkeenleyside@Gabriels-MBP.Home>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.html
@@ -43,6 +43,7 @@
           [class.active]="i==this.activeIndex"
           [class.top]="i==0"
           [class.bottom]="i==menuItems.length-1"
+          (click)='itemClicked(menuItem); $event.stopPropagation(); closeContextMenu()'
           (mouseover)="this.activeIndex=i; makeNavigable(); $event.stopPropagation();"
         >
           <div style="display: flex;">
